# LichGroup-CubePVP

./: CMakeLists.txt  README.md  main.cpp  main.h
src/hooks/: player_head_check_hook.h  printmessage_hook.h
src/lichmods/: Challenge.cpp  Challenge.h  ChallengeAction.cpp  ChallengeAction.h  ChallengeClient.cpp  ChallengeClient.h  ChallengeHandler.cpp  ChallengeHandler.h  ChallengeHost.cpp  ChallengeHost.h  ChallengeRequest.cpp  ChallengeRequest.h  ChallengeRequestList.cpp  ChallengeRequestList.h  ChallengeRule.cpp  ChallengeRule.h  Player.cpp  Player.h  lich.cpp  lich.h
